config: vite config added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "advice-generator-api-based",
+  "homepage": "https://github.com/Mushkir/advice-generator-API-based-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
